[TestScanCommandInteractivePTYRunningSnapshotShortHeight - 1]
cmd.scan.header.running
⣾  alpha.jar
⣾  beta.jar
⣾  delta.jar
⣾  epsilon.jar
⣾  eta.jar
⣾  gamma.jar
⣾  iota.jar
⣾  kappa.jar
⣾  lambda.jar
⣾  mu.jar
⣾  nu.jar
⣾  theta.jar
⣾  xi.jar
⣾  zeta.jar

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
✅ lithium-123.23.jar -> Lithium (lithium) [modrinth]
✅ shulkerbox.jar -> Shulker Box Tooltip (shulker-tooltip) [modrinth]
✅ sodium.jar -> Sodium (sodium) [modrinth]
✅ soundsbegone.jar -> Sounds Be Gone! (sounds-be-gone) [modrinth]
---

[TestScanCommandInteractivePTYRunningSnapshotMediumHeight - 1]
cmd.scan.header.running
⣾  alpha.jar
⣾  beta.jar
⣾  delta.jar
⣾  epsilon.jar
⣾  gamma.jar
⣾  zeta.jar

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
---

[TestScanCommandInteractivePTYFinalTranscriptShortHeight - 1]
cmd.scan.header.results

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
✅ lithium-123.23.jar -> Lithium (lithium) [modrinth]
✅ shulkerbox.jar -> Shulker Box Tooltip (shulker-tooltip) [modrinth]
✅ sodium.jar -> Sodium (sodium) [modrinth]
✅ soundsbegone.jar -> Sounds Be Gone! (sounds-be-gone) [modrinth]

cmd.scan.section.unknown (cmd.scan.section.unknown_note)
❌ unmanaged-a.jar
❌ unmanaged-b.jar
❌ unmanaged-c.jar
❌ unmanaged-d.jar
❌ unmanaged-e.jar
❌ unmanaged-f.jar

cmd.scan.section.unsure (cmd.scan.section.unsure_note)
❔ flaky-a.jar
❔ flaky-b.jar
❔ flaky-c.jar
❔ flaky-d.jar
❔ flaky-e.jar
❔ flaky-f.jar
---

[TestScanCommandInteractivePTYRunningSnapshotTallHeight - 1]
cmd.scan.header.running
⣾  alpha.jar
⣾  beta.jar
⣾  delta.jar
⣾  epsilon.jar
⣾  gamma.jar
⣾  zeta.jar

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
✅ lithium-123.23.jar -> Lithium (lithium) [modrinth]
✅ shulkerbox.jar -> Shulker Box Tooltip (shulker-tooltip) [modrinth]
✅ sodium.jar -> Sodium (sodium) [modrinth]
✅ soundsbegone.jar -> Sounds Be Gone! (sounds-be-gone) [modrinth]

cmd.scan.section.unknown (cmd.scan.section.unknown_note)
❌ unmanaged-a.jar
❌ unmanaged-b.jar
❌ unmanaged-c.jar
❌ unmanaged-d.jar
❌ unmanaged-e.jar
❌ unmanaged-f.jar

cmd.scan.section.unsure (cmd.scan.section.unsure_note)
❔ flaky-a.jar
❔ flaky-b.jar
❔ flaky-c.jar
❔ flaky-d.jar
❔ flaky-e.jar
❔ flaky-f.jar
---

[TestScanCommandInteractivePTYFinalTranscriptMediumHeight - 1]
cmd.scan.header.results

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
✅ lithium-123.23.jar -> Lithium (lithium) [modrinth]
✅ shulkerbox.jar -> Shulker Box Tooltip (shulker-tooltip) [modrinth]
✅ sodium.jar -> Sodium (sodium) [modrinth]
✅ soundsbegone.jar -> Sounds Be Gone! (sounds-be-gone) [modrinth]

cmd.scan.section.unknown (cmd.scan.section.unknown_note)
❌ unmanaged-a.jar
❌ unmanaged-b.jar
❌ unmanaged-c.jar
❌ unmanaged-d.jar
❌ unmanaged-e.jar
❌ unmanaged-f.jar

cmd.scan.section.unsure (cmd.scan.section.unsure_note)
❔ flaky-a.jar
❔ flaky-b.jar
❔ flaky-c.jar
❔ flaky-d.jar
❔ flaky-e.jar
❔ flaky-f.jar
---

[TestScanCommandInteractivePTYFinalTranscriptTallHeight - 1]
cmd.scan.header.results

cmd.scan.section.recognized
✅ appleskin.jar -> AppleSkin (appleskin) [modrinth]
✅ bc.jar -> Better Clouds (better-clouds) [modrinth]
✅ inventorysorter.jar -> Inventory Sorting (inventory-sorting) [modrinth]
✅ lithium-123.23.jar -> Lithium (lithium) [modrinth]
✅ shulkerbox.jar -> Shulker Box Tooltip (shulker-tooltip) [modrinth]
✅ sodium.jar -> Sodium (sodium) [modrinth]
✅ soundsbegone.jar -> Sounds Be Gone! (sounds-be-gone) [modrinth]

cmd.scan.section.unknown (cmd.scan.section.unknown_note)
❌ unmanaged-a.jar
❌ unmanaged-b.jar
❌ unmanaged-c.jar
❌ unmanaged-d.jar
❌ unmanaged-e.jar
❌ unmanaged-f.jar

cmd.scan.section.unsure (cmd.scan.section.unsure_note)
❔ flaky-a.jar
❔ flaky-b.jar
❔ flaky-c.jar
❔ flaky-d.jar
❔ flaky-e.jar
❔ flaky-f.jar
---

[TestScanCommandInteractivePTYRunningSnapshotShortHeightManyMods - 1]
cmd.scan.header.running
⣾  ArmorPoser-fabric-1.21.10-12.3.0.jar
⣾  audioplayer-fabric-2.1.0+1.21.10.jar
⣾  Axiom-5.2.1-for-MC1.21.10.jar
⣾  BetterServerPacksFabric-1.2.0.jar
⣾  carpet-tis-addition-v1.74.0-mc1.21.10.jar
⣾  cicada-lib-0.14.3+1.21.9-1.21.10.jar
⣾  cloth-config-20.0.149-fabric.jar
⣾  coordfinder-fabric-1.21.10-1.1.0.jar
⣾  CraterLib-Fabric-1.21.9-3.0.1.jar
⣾  do_a_barrel_roll-fabric-3.8.3+1.21.9.jar
⣾  entityculling-fabric-1.9.5-mc1.21.10.jar
⣾  fabric-api-0.138.4+1.21.10.jar
⣾  fabric-carpet-1.21.10-1.4.188+v251016.jar
⣾  fabric-language-kotlin-1.13.8+kotlin.2.3.0.jar
⣾  ferritecore-8.0.2-fabric.jar
⣾  inventorysorter-fabric-2.1.4+mc1.21.9.jar
⣾  krypton-0.2.10.jar
⣾  lithium-fabric-0.20.1+mc1.21.10.jar
⣾  MaintenanceMode-Universal-1.3.1.jar
⣾  malilib-fabric-1.21.10-0.26.8.jar
⣾  restart-detector-1.2.7+1.21.10.jar
⣾  servux-fabric-1.21.10-0.8.5.jar
⣾  SimpleDiscordLink-Universal-3.3.4.jar
⣾  spark-1.10.152-fabric.jar
---

[TestScanCommandInteractivePTYPromptConfirmAddedOnly - 1]
cmd.scan.section.added
✅ Alpha (alpha) [modrinth]
---

[TestScanCommandInteractivePTYPromptDeclineCancelledOnly - 1]
✅ cmd.scan.adoption.cancelled
---
